Style Fix: Re-adjust spacing for motor/esc settings

--- a/src/css/tabs/motors.less
+++ b/src/css/tabs/motors.less
@@ -51,12 +51,12 @@
     }
     table.featuresMultiple {
         border-collapse: collapse;
+        margin-bottom: 0.5rem;
         tbody {
             border-bottom: 1px solid var(--surface-500);
-
             tr {
                 td {
-                    padding: 0.5rem 0;
+                    padding: 0 0 0.5rem 0;
                 }
             }
         }
@@ -140,6 +140,7 @@
     }
     .selectProtocol {
         padding: 0.5rem 0;
+        margin-bottom: 0.5rem;
         border-bottom: 1px solid var(--surface-500);
         width: 100%;
     }
